--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Reservation</title>
+  <title>GameOn - Réservations</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="modal.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,26 +58,28 @@
           <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData">
               <label for="first">Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" minlength="2" required/><br>
+              <!-- <input class="text-control" type="text" id="first" name="first" minlength="2" required/><br> -->
+              <input class="text-control" type="text" id="first" name="first"
+                data-error="Vous devez entrer 2 caractères au minimum" /><br>
             </div>
             <div class="formData">
               <label for="last">Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last" minlength="2" required/><br>
+              <input class="text-control" type="text" id="last" name="last" minlength="2" data-error="Vous devez entrer 2 caractères au minimum" /><br>
             </div>
             <div class="formData">
               <label for="email">E-mail</label><br>
-              <input class="text-control" type="email" id="email" name="email" required/><br>
+              <input class="text-control" type="email" id="email" name="email" data-error="Veuillez entrer une adresse e-mail valide"/><br>
             </div>
             <div class="formData">
               <label for="birthdate">Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate" required/><br>
+              <input class="text-control" type="date" id="birthdate" name="birthdate" data-error="Veuillez entrer votre date de naissance"/><br>
             </div>
             <div class="formData">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" data-error="Veuillez entrer un nombre entre 0 et 99">
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-            <div class="formData">
+            <div class="formData formData--radioBtn">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
               <label class="checkbox-label" for="location1">
                 <span class="checkbox-icon"></span>
@@ -105,8 +107,8 @@
             </div>
 
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
-              <label class="checkbox2-label" for="checkbox1" required>
+              <input class="checkbox-input" type="checkbox" id="checkbox1" checked data-error="Veuillez vérifier que vous accepter les termes et conditions." />
+              <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
               </label>
@@ -114,12 +116,17 @@
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
               <label class="checkbox2-label" for="checkbox2">
                 <span class="checkbox-icon"></span>
-                Je Je souhaite être prévenu des prochains évènements.
+                Je souhaite être prévenu des prochains évènements.
               </label>
               <br>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti" id="btn-submit"/>
+            <input class="button btn-submit" type="submit" value="C'est parti" id="btn-submit" />
           </form>
+          <div class="modal-body-success">
+            <p class="modal-title">Merci pour votre inscription !</p>
+            <p class="modal-text">Vous êtes maintenant inscrit à la newsletter de GameOn.</p>
+            <input class="button btn-close" type="reset" value="Fermer" id="btn-close" />
+          </div>
         </div>
       </div>
     </div>
