--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>GameOn - Réservations</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="modal.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="modal.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
 </head>
 
 <body>
-  <div class="topnav" id="myTopnav">
+  <header class="topnav" id="myTopnav">
     <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="Logo.png" class="logo">
     </div>
-    <div class="main-navbar">
-
+    <nav class="main-navbar">
       <a href="#" class="active"><span>Accueil</span></a>
       <a href="#"><span>Détails de l'évènement</span></a>
       <a href="#"><span>À propos</span></a>
@@ -25,9 +24,8 @@
       <a href="javascript:void(0);" class="icon" onclick="editNav()">
         <i class="fa fa-bars"></i>
       </a>
-    </div>
-  </div>
-  </div>
+    </nav>
+  </header>
   <main>
     <div class="hero-section">
       <div class="hero-content">
@@ -44,96 +42,116 @@
         </button>
       </div>
       <div class="hero-img">
-        <img src="./bg_img.jpg" alt="img" />
+        <img src="./bg_img.jpg" alt="img">
       </div>
       <button class="btn-signup modal-btn">
         je m'inscris
       </button>
     </div>
 
-    <div class="bground">
+    <div class="bground --hide">
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
-            <div class="formData">
+          <form class="--show" name="reserve" action="index.html" method="get" onsubmit="return validate();">
+            <div class="formData" data-error-visible data-error="Vous devez entrer 2 caractères au minimum."
+              data-name="first">
               <label for="first">Prénom</label><br>
-              <!-- <input class="text-control" type="text" id="first" name="first" minlength="2" required/><br> -->
-              <input class="text-control" type="text" id="first" name="first"
-                data-error="Vous devez entrer 2 caractères au minimum" /><br>
-            </div>
-            <div class="formData">
-              <label for="last">Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last" minlength="2" data-error="Vous devez entrer 2 caractères au minimum" /><br>
-            </div>
-            <div class="formData">
-              <label for="email">E-mail</label><br>
-              <input class="text-control" type="email" id="email" name="email" data-error="Veuillez entrer une adresse e-mail valide"/><br>
-            </div>
-            <div class="formData">
-              <label for="birthdate">Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate" data-error="Veuillez entrer votre date de naissance"/><br>
-            </div>
-            <div class="formData">
-              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" data-error="Veuillez entrer un nombre entre 0 et 99">
-            </div>
-            <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-            <div class="formData formData--radioBtn">
-              <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
-              <label class="checkbox-label" for="location1">
-                <span class="checkbox-icon"></span>
-                New York</label>
-              <input class="checkbox-input" type="radio" id="location2" name="location" value="San Francisco" />
-              <label class="checkbox-label" for="location2">
-                <span class="checkbox-icon"></span>
-                San Francisco</label>
-              <input class="checkbox-input" type="radio" id="location3" name="location" value="Seattle" />
-              <label class="checkbox-label" for="location3">
-                <span class="checkbox-icon"></span>
-                Seattle</label>
-              <input class="checkbox-input" type="radio" id="location4" name="location" value="Chicago" />
-              <label class="checkbox-label" for="location4">
-                <span class="checkbox-icon"></span>
-                Chicago</label>
-              <input class="checkbox-input" type="radio" id="location5" name="location" value="Boston" />
-              <label class="checkbox-label" for="location5">
-                <span class="checkbox-icon"></span>
-                Boston</label>
-              <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland" />
-              <label class="checkbox-label" for="location6">
-                <span class="checkbox-icon"></span>
-                Portland</label>
+              <!-- <input class="text-control" type="text" id="first" name="first" minlength="2" required><br> -->
+              <input class="text-control" type="text" id="first" name="first"><br>
             </div>
 
-            <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked data-error="Veuillez vérifier que vous accepter les termes et conditions." />
+            <div class="formData" data-error-visible data-error="Vous devez entrer 2 caractères au minimum."
+              data-name="last">
+              <label for="last">Nom</label><br>
+              <input class="text-control" type="text" id="last" name="last" minlength="2"><br>
+            </div>
+
+            <div class="formData" data-error-visible data-error="Veuillez entrer une adresse e-mail valide."
+              data-name="email">
+              <label for="email">E-mail</label><br>
+              <input class="text-control" type="email" id="email" name="email"><br>
+            </div>
+
+            <div class="formData" data-error-visible data-error="Veuillez entrer votre date de naissance."
+              data-name="birthdate">
+              <label for="birthdate">Date de naissance</label><br>
+              <input class="text-control" type="date" id="birthdate" name="birthdate"><br>
+            </div>
+
+            <div class="formData" data-error-visible data-error="Veuillez entrer un nombre entre 1 et 99."
+              data-name="quantity">
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+            </div>
+
+            <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+            <div class="formData formData--radioBtn" data-error-visible
+              data-error="Vous devez sélectionner un tournoi auquel participer." data-name="location">
+              <input class="radio-input" type="radio" id="location1" name="location" value="New York">
+              <label class="radio-label" for="location1">
+                <span class="radio-icon"></span>
+                New York
+              </label>
+              <input class="radio-input" type="radio" id="location2" name="location" value="San Francisco">
+              <label class="radio-label" for="location2">
+                <span class="radio-icon"></span>
+                San Francisco
+              </label>
+              <input class="radio-input" type="radio" id="location3" name="location" value="Seattle">
+              <label class="radio-label" for="location3">
+                <span class="radio-icon"></span>
+                Seattle
+              </label>
+              <input class="radio-input" type="radio" id="location4" name="location" value="Chicago">
+              <label class="radio-label" for="location4">
+                <span class="radio-icon"></span>
+                Chicago
+              </label>
+              <input class="radio-input" type="radio" id="location5" name="location" value="Boston">
+              <label class="radio-label" for="location5">
+                <span class="radio-icon"></span>
+                Boston
+              </label>
+              <input class="radio-input" type="radio" id="location6" name="location" value="Portland">
+              <label class="radio-label" for="location6">
+                <span class="radio-icon"></span>
+                Portland
+              </label>
+            </div>
+
+            <div class="formData" data-error-visible
+              data-error="Veuillez vérifier que vous acceptez les termes et conditions." data-name="usingConditions">
+              <input class="checkbox-input" type="checkbox" id="checkbox1" name="usingConditions">
               <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
               </label>
               <br>
-              <input class="checkbox-input" type="checkbox" id="checkbox2" />
+              <input class="checkbox-input" type="checkbox" id="checkbox2">
               <label class="checkbox2-label" for="checkbox2">
                 <span class="checkbox-icon"></span>
                 Je souhaite être prévenu des prochains évènements.
               </label>
               <br>
             </div>
-            <input class="button btn-submit" type="submit" value="C'est parti" id="btn-submit" />
+            <input class="button btn-submit" type="submit" value="C'est parti" id="btn-submit">
           </form>
-          <div class="modal-body-success">
-            <p class="modal-title">Merci pour votre inscription !</p>
-            <p class="modal-text">Vous êtes maintenant inscrit à la newsletter de GameOn.</p>
-            <input class="button btn-close" type="reset" value="Fermer" id="btn-close" />
+        </div>
+        <div class="modal-body-success --hide">
+          <div class="modal-text-container">
+            <p class="modal-text">Merci pour votre inscription !</p>
+            <p class="modal-text --hide" data-name="modal-text-newsletter">Vous êtes maintenant inscrit à la
+              newsletter de GameOn.</p>
           </div>
+          <input class="button btn-close" type="reset" value="Fermer" id="btn-close">
         </div>
       </div>
     </div>
   </main>
   <footer>
     <p class="copyrights">
-      Copyright 2014 - 2022, GameOn Inc.
+      Copyright 2014 - 2023, GameOn Inc.
     </p>
   </footer>
   <script src="modal.js"></script>
