#4 - Registration message and localStorage

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="modal-body-success --hide">
           <div class="modal-text-container">
-            <p class="modal-text">Merci pour votre inscription !</p>
+            <p class="modal-text">Votre inscription a bien été prise en compte !</p>
             <p class="modal-text --hide" data-name="modal-text-newsletter">Vous êtes maintenant inscrit à la
               newsletter de GameOn.</p>
           </div>
