--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -24,7 +24,7 @@
       <a href="#"><span>À propos</span></a>
       <a href="#"><span>Contact</span></a>
       <a href="#"><span>Évènements passés</span></a>
-      <a href="javascript:void(0);" class="icon" onclick="editNav()">
+      <a class="icon">
         <i class="fa fa-bars"></i>
       </a>
     </nav>
@@ -52,16 +52,15 @@
       </button>
     </div>
 
-    <div class="bground --hide">
+    <div class="bground hide">
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form class="--show" name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData" data-error-visible data-error="Vous devez entrer 2 caractères au minimum."
               data-name="first">
               <label for="first">Prénom</label><br>
-              <!-- <input class="text-control" type="text" id="first" name="first" minlength="2" required><br> -->
-              <input class="text-control" type="text" id="first" name="first"><br>
+              <input class="text-control" type="text" id="first" name="first" minlength="2" required><br>
             </div>
 
             <div class="formData" data-error-visible data-error="Vous devez entrer 2 caractères au minimum."
@@ -85,7 +84,7 @@
             <div class="formData" data-error-visible data-error="Veuillez entrer un nombre entre 1 et 99."
               data-name="quantity">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <input type="number" class="text-control" id="quantity" name="quantity" min="1" max="99">
             </div>
 
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
@@ -124,8 +123,8 @@
             </div>
 
             <div class="formData" data-error-visible
-              data-error="Veuillez vérifier que vous acceptez les termes et conditions." data-name="usingConditions">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" name="usingConditions">
+              data-error="Veuillez vérifier que vous acceptez les termes et conditions." data-name="usingCondition">
+              <input class="checkbox-input" type="checkbox" id="checkbox1" name="usingCondition">
               <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
@@ -141,10 +140,10 @@
             <input class="button btn-submit" type="submit" value="C'est parti" id="btn-submit">
           </form>
         </div>
-        <div class="modal-body-success --hide">
+        <div class="modal-body-success hide">
           <div class="modal-text-container">
             <p class="modal-text">Votre inscription a bien été prise en compte !</p>
-            <p class="modal-text --hide" data-name="modal-text-newsletter">Vous êtes maintenant inscrit à la
+            <p class="modal-text hide" data-name="modal-text-newsletter">Vous êtes maintenant inscrit à la
               newsletter de GameOn.</p>
           </div>
           <input class="button btn-close" type="reset" value="Fermer" id="btn-close">
