#5 - Responsive and manual testing

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>GameOn - Réservations</title>
-
   <link href="./favicon.png" rel="icon" type="image/png">
-
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="modal.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,11 +17,13 @@
       <img alt="logo" src="Logo.png" class="logo">
     </div>
     <nav class="main-navbar">
-      <a href="#" class="active"><span>Accueil</span></a>
-      <a href="#"><span>Détails de l'évènement</span></a>
-      <a href="#"><span>À propos</span></a>
-      <a href="#"><span>Contact</span></a>
-      <a href="#"><span>Évènements passés</span></a>
+      <div class="navbar-links">
+        <a href="#" class="active"><span>Accueil</span></a>
+        <a href="#"><span>Détails de l'évènement</span></a>
+        <a href="#"><span>À propos</span></a>
+        <a href="#"><span>Contact</span></a>
+        <a href="#"><span>Évènements passés</span></a>
+      </div>
       <a class="icon">
         <i class="fa fa-bars"></i>
       </a>
