--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -56,7 +56,7 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form name="reserve" action="index.html" method="get">
             <div class="formData" data-error-visible data-error="Vous devez entrer 2 caractères au minimum."
               data-name="first">
               <label for="first">Prénom</label><br>
